# AI-Object-Narrator-Blind

./: .gitignore  README.md
backend/: README.md  pyproject.toml  requirements.txt
backend/app/: config.py  context_store.py  main.py  nemotron_client.py  schemas.py  storage.py  tts.py  yolo_detector.py
frontend/: .env  .env.local  .env.mobile.example  .env.production  README.md  capacitor.config.ts  index.html  package-lock.json  package.json  tailwind.config.ts  vercel.json  vite.config.ts
frontend/android/app/: build.gradle
frontend/android/app/src/main/java/com/sanjanashankar/aiobjectnarrator/: MainActivity.java
frontend/android/app/src/main/res/values/: strings.xml
frontend/src/: index.css
frontend/src/components/dashboard/: CameraFeed.tsx  ChatModal.tsx  Dashboard.tsx  DetectedObjectsList.tsx  LandingView.tsx  SettingsPanel.tsx  StatusBadge.tsx  TranscriptPanel.tsx
frontend/src/hooks/: useNarrator.ts  useSpeech.ts  useSpeechRecognition.ts
view-narrate-assist-main/src/components/dashboard/: CameraFeed.tsx  Dashboard.tsx  LandingView.tsx  SettingsPanel.tsx
